 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================


--------------------------
2013-07-16
- r1003 modify fill for solid-cut only
  - comment out: Solid_from_Cut(int* mid, ..., const int target)
  - Solid cutのみを対象とする > fill_by_mid(), fill_seed(), fill_by_bid(), 
                             Solid_from_Cut(int* mid, …, CompoList* cmp)
  - /BCtable/LocalBoundary/BC[@]/samplingMode, samplingMethod

--------------------------
2013-07-15

- r1002 add calcBboxfromPolygonGroup()
  - CompoFraction::get_min/maxをstaticに変更
  - PolygonProperty::min, maxとsetter/getterを追加
  - calcBboxfromPolygonGroup()を追加

- r1001 BC recognition by cut info
  - FFV::setup_Polygon2CutInfo(), FFV::min_distance()の整理
  - Cutの最小値計算時間の比較 CutPos->getPos()よりインデクスの直接計算の方が高速
  - PorygonPropertyクラスによりポリゴンの情報管理(Control.h)
  - encVBC_Cut()の修正，テスト中
  
--------------------------
2013-07-13

- r1000 confirm operation /w Polylib-2.6.4 and Cutlib-3.1.2 [ver 1.2.4]
 - modify configure.ac for GNU fortran /w openMPI 1.6 or later
 - change poly_org/poly_dx from double to float, and add cut_org/cut_dx
 - Polylib and Cutlib check for binary voxel

--------------------------
2013-07-11

- r999 extend min/max calculation [ver 1.2.3]
 - fb_minmax_v(), fb_minmax_vex()

- r998 keyword error trap in MediumTable [ver 1.2.2]

- r997 change parameter format
 - BCTable/FaceBC/Xminus/Alias  ->  AssignedAlias
 - Change parameter structure of Iteration
 - Add ConveregenceCriterion class in Control.h
 - Control::findCriteria() -> Control::setCriteria()
 - Add Control::setPara_*() for iterative methods
 - change /Meidum/label -> alias
 - Density -> MassDensity

--------------------------
2013-07-10
