@@ -17,7 +17,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([FFVC], [1.2.4], [keno@riken.jp], [FFVC])
+AC_INIT([FFVC], [1.2.5], [keno@riken.jp], [FFVC])
 AM_INIT_AUTOMAKE()
 AC_CONFIG_SRCDIR([src/FB/Alloc.C])
 AC_CONFIG_HEADERS([config.h])
@@ -25,7 +25,7 @@ AC_CONFIG_HEADERS([config.h])
 #
 # revision No.
 #
-FFVC_REVISION="20130713_1800"
+FFVC_REVISION="20130716_1430"
 AC_SUBST(FFVC_REVISION)
 
 
@@ -179,8 +179,10 @@ AC_SUBST(FFVC_FC_LD)
 
 if test "$with_comp" = "FJ"; then
   FFVC_FC_LD="$CXX"" --linkfortran"
-else
+elif test "$with_comp" = "INTEL" ; then
   FFVC_LIBS="$FFVC_LIBS"" -lifport -lifcore"
+else
+  FFVC_LIBS="$FFVC_LIBS"" -lstdc++"
 fi
 
 FFVC_LDFLAGS=""
