@@ -113,11 +113,11 @@ HEADERS = $(doc_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/missing --run aclocal-1.12
+ACLOCAL = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/missing --run aclocal-1.12
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/missing --run autoconf
-AUTOHEADER = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/missing --run autoheader
-AUTOMAKE = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/missing --run automake-1.12
+AUTOCONF = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/missing --run autoconf
+AUTOHEADER = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/missing --run autoheader
+AUTOMAKE = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/missing --run automake-1.12
 AWK = awk
 CC = mpicc
 CCDEPMODE = depmode=gcc3
@@ -130,9 +130,9 @@ CPM_DIR = /usr/local/CPMlib
 CPM_LDFLAGS = -L/usr/local/CPMlib/lib -lCPM -lstdc++ -lifport -lifcore
 CPP = mpicc -E
 CPPFLAGS = 
-CUT_CFLAGS = -I/usr/local/Cutlib/include -DCUTINFO_NORMAL_DOUBLE -I/usr/local/Polylib/include -I/usr/local/TextParser/include -I/usr/local/TextParser/include
+CUT_CFLAGS = -I/usr/local/Cutlib/include -DCUTINFO_NORMAL_DOUBLE
 CUT_DIR = /usr/local/Cutlib
-CUT_LDFLAGS = -L/usr/local/Cutlib/lib -lCUT -L/usr/local/Polylib/lib -lMPIPOLY -L/usr/local/TextParser/lib -lMPITP -L/usr/local/TextParser/lib -lMPITP
+CUT_LDFLAGS = -L/usr/local/Cutlib/lib -lCUT
 CXX = mpicxx
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -O3 -openmp -par-report=3 -vec-report=2
@@ -153,7 +153,7 @@ FFVC_FC = mpif90
 FFVC_FC_LD = 
 FFVC_LDFLAGS = 
 FFVC_LIBS =  -lifport -lifcore
-FFVC_REVISION = 20130713_1800
+FFVC_REVISION = 20130716_1430
 FREALOPT = 
 GREP = /usr/bin/grep
 INSTALL = /usr/local/bin/ginstall -c
@@ -165,7 +165,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/missing --run makeinfo
+MAKEINFO = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/missing --run makeinfo
 MAKE_SUB_DIRS = src/IP src/FB src/F_CORE src/PLOT3D src/FFV src/Util_Combsph src/Util_Layout doc
 MKDIR_P = /usr/local/bin/gmkdir -p
 MPICH_CFLAGS = 
@@ -177,14 +177,14 @@ OBJEXT = o
 PACKAGE = FFVC
 PACKAGE_BUGREPORT = keno@riken.jp
 PACKAGE_NAME = FFVC
-PACKAGE_STRING = FFVC 1.2.4
+PACKAGE_STRING = FFVC 1.2.5
 PACKAGE_TARNAME = FFVC
 PACKAGE_URL = 
-PACKAGE_VERSION = 1.2.4
+PACKAGE_VERSION = 1.2.5
 PATH_SEPARATOR = :
-PL_CFLAGS = -I/usr/local/Polylib/include -I/usr/local/TextParser/include
+PL_CFLAGS = -I/usr/local/Polylib/include
 PL_DIR = /usr/local/Polylib
-PL_LDFLAGS = -L/usr/local/Polylib/lib -lMPIPOLY -L/usr/local/TextParser/lib -lMPITP
+PL_LDFLAGS = -L/usr/local/Polylib/lib -lMPIPOLY
 PM_CFLAGS = -I/usr/local/PMlib/include
 PM_DIR = /usr/local/PMlib
 PM_LDFLAGS = -L/usr/local/PMlib/lib -lPM
@@ -197,11 +197,11 @@ TGT_DEVICE = Mountain_Lion
 TP_CFLAGS = -I/usr/local/TextParser/include
 TP_DIR = /usr/local/TextParser
 TP_LDFLAGS = -L/usr/local/TextParser/lib -lMPITP
-VERSION = 1.2.4
-abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/doc
-abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/doc
-abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3
-abs_top_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3
+VERSION = 1.2.5
+abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/doc
+abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/doc
+abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4
+abs_top_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4
 ac_ct_CC = mpicc
 ac_ct_CXX = 
 ac_ct_F77 = ifort
@@ -223,7 +223,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.3/install-sh
+install_sh = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.2.4/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
