@@ -59,7 +59,7 @@ while test $# -gt 0; do
     --version)
 cat <<EOF
 
-# FFV-C : Frontflow / violet Cartesian  Ver. 1.2.4  (20130713_1800)
+# FFV-C : Frontflow / violet Cartesian  Ver. 1.2.5  (20130716_1430)
 #
 # Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 # All rights reserved.
